; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_view.c_rofi_view_hide.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_view.c_rofi_view_hide.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.TYPE_3__ = type { i32 }

@CacheState = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@XCB_WINDOW_NONE = common dso_local global i64 0, align 8
@xcb = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rofi_view_hide() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @CacheState, i32 0, i32 0), align 8
  %2 = load i64, i64* @XCB_WINDOW_NONE, align 8
  %3 = icmp ne i64 %1, %2
  br i1 %3, label %4, label %11

4:                                                ; preds = %0
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** @xcb, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @CacheState, i32 0, i32 0), align 8
  %9 = call i32 @xcb_unmap_window(i32 %7, i64 %8)
  %10 = call i32 (...) @display_early_cleanup()
  br label %11

11:                                               ; preds = %4, %0
  ret void
}

declare dso_local i32 @xcb_unmap_window(i32, i64) #1

declare dso_local i32 @display_early_cleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
